fix: detail no wrap

--- a/resultTable.css
+++ b/resultTable.css
@@ -404,7 +404,7 @@
   position: absolute;
   top: 100%;
   left: 4px;
-  width: 340px;
+  min-width: 340px;
   height: auto;
   display: flex;
   background-color: var(--card-gray);
@@ -413,7 +413,7 @@
 }
 
 .unusual-info-detail ul {
-  width: 33.3%;
+  /* width: 33.3%; */
   margin-bottom: 0;
 }
 
@@ -421,8 +421,8 @@
   font-size: 16px;
   font-weight: 500;
   margin-bottom: 4px;
-  text-wrap: wrap;
-  white-space: wrap;
+  text-wrap: nowrap;
+  white-space: nowrap;
 }
 
 .detail-container {
@@ -430,7 +430,11 @@
 }
 
 .detail-container ul {
-  padding: 0 12px 0 20px;
-  width: 33.3%;
+  padding: 0 12px 0 24px;
   margin-bottom: 0;
+}
+
+.detail-container ul {
+  text-wrap: nowrap;
+  white-space: nowrap;
 }
